--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -1,18 +1,36 @@
-/* Define custom font-family properties for the root element */
+/* Define custom properties for the root element */
 :root {
-  --font-family-base: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-  --font-family-title: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  --color-primary: #d73953;
+  --color-black: #090909;
+  --color-white: #ffffff;
+  --color-light-grey: #f3f3f3;
+  --color-dark-grey: #353535;
+  --text-color: var(--color-black);
+  --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* Set the font-family of the body to font-family-base */
+/* Reset the color of section-tagline to color-primary */
+.section-tagline {
+  color: var(--color-primary);
+}
+
+/* Reset the color of card-category to color-primary */
+.card-category {
+  color: var(--color-primary);
+}
+
+/* Reset the color of body and anchor to text-color */
 body {
+  color: var(--text-color);
   font-family: var(--font-family-base);
 }
 
-/* Set the font-family of section headings to font-family-title */
+a {
+  color: var(--text-color);
+}
+
+/* Define font-family for section headings */
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-family-title);
 }
-
-/* Your existing declarations for links can go here or follow this section */
-
