--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -1,10 +1,11 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Universal box-sizing rule */
-* {
+html {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 html {
