--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -228,6 +228,15 @@ template {
   --section-footer-padding: 3rem 0 0;
   --section-footer-align: center;
   --footer-padding: 5rem 0 1rem;
+
+  /* Custom properties for navbar and links */
+  --nav-item-font-family: var(--font-family-title);
+  --nav-item-font-weight: var(--font-weight-bold);
+  --nav-item-font-size: var(--font-size-medium);
+  --nav-item-letter-spacing: 4%;
+  --nav-item-display: inline-block;
+  --nav-item-margin: 0 0 3rem 0;
+  --nav-item-link-hover: var(--color-primary);
 }
 
 /* Set the base font size for the html element to 62.5% */
@@ -315,3 +324,36 @@ a[href]:active {
 .footer {
   padding: var(--footer-padding);
 }
+
+/* Navbar menu styles */
+.navbar-menu {
+  float: right;
+}
+
+/* Nav styles */
+.nav {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+/* Nav-item styles */
+.nav .nav-item {
+  font-family: var(--nav-item-font-family);
+  font-weight: var(--nav-item-font-weight);
+  font-size: var(--nav-item-font-size);
+  letter-spacing: var(--nav-item-letter-spacing);
+  display: var(--nav-item-display);
+  margin: var(--nav-item-margin);
+}
+
+/* Nav-link styles */
+.nav .nav-link {
+  display: block;
+  padding: calc(0.5 * 1.6rem) 1.6rem;
+}
+
+.nav .nav-link:hover {
+  color: var(--nav-item-link-hover);
+}
+
